# rmtFS

./: .env  Cargo.toml  database.db
src/: apis.rs  apis.rs.back  apis_mock.rs.back  constants.rs  db.rs  jwt.rs  main.rs  models.rs  utils.rs
src/files/: test_file.txt
src/files/bb5065ff-6c49-496b-b257-48cfa5b27b6a/: big.txt  small.txt
src/files/ecde1d93-96ce-4429-b7a3-487a5a9a7a61/: libc.deb  static_voltage_stablizer.docx
src/handler/: file_handler.rs  mod.rs  user_handler.rs
src/model/: file_model.rs  mod.rs  user_model.rs
src/repo/: file_repo.rs  mod.rs  user_repo.rs
src/tests/: create_file.test.rs  delete_file.test.rs  get_file_id.test.rs  get_files.test.rs  get_user_details.test.rs  login.test.rs  register.test.rs
