[package]
name = "rmtFS"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.10"
actix-rt = "2.5.0"
actix-session = "0.6"
actix-identity = "0.4"
env_logger = "0.9"
futures = "0.3"
uuid = { version="1.0", features = ["v4"] }
sqlx = { version = "0.8.2", features = ["sqlite"] }
dotenv = "0.15.0"

[dev-dependencies]
actix-web = "4"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
